# open-rice-scraper

./: README.md  pyproject.toml  scrape_openrice.py
