[tool.poetry]
name = "openrice"
version = "0.1.0"
description = ""
authors = ["kwchun0520 <ckw05200@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
unicode = "^2.9"
bs4 = "^0.0.2"
requests = "^2.31.0"
selenium = "^4.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
